# spotify-automute

./: .envrc  .gitignore  Makefile  Readme.md  main.py  pyproject.toml  requirements.txt
src/spotify_automute/: main.py
